[TRSP-132] Fix customer group/account overflow and add tooltip

--- a/src/styles/apps/cloudpricing/priceZoneReassignment/_priceZone.scss
+++ b/src/styles/apps/cloudpricing/priceZoneReassignment/_priceZone.scss
@@ -653,7 +653,10 @@ width: calc(100vw - 26rem);
 .pz-customer-tag {
   background: #76e0f6;
   text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   border-radius: 5px;
+  overflow: hidden;
 }
 .pz-attribute-tag {
   background: #f6e176;
